Fixing project alignment issue

--- a/styles/projects.styl
+++ b/styles/projects.styl
@@ -2,17 +2,43 @@
     background-color: medium-dark
 }
 
-.project {
-    box-sizing: border-box
-    padding: 2.375rem 1.75rem 2.375rem constrained-width-half-partial
-    display: inline-block
-    vertical-align: top
-    width: constrained-width-partial
-    min-height: 12rem
-    border-right: solid 1px dark-dark
+.project-row {
     border-bottom: solid 1px dark-dark
+}
+
+.project-row:last-child {
+    border-bottom: none;
+}
+
+.project-row:hover, .project-row:focus, .project-row:active {
+    background-color: #242b32
+}
+
+@media (max-width: constrained-width) {
+    .project-row:last-child {
+        border-bottom: solid 1px dark-dark
+    }
+}
+
+.project {
+    @extend $constrain
     cursor: pointer
     position: relative
+
+    @media (max-width: constrained-width) {
+        mobile-padding()
+        width: constrained-width-mobile
+    }
+}
+
+.project-left,
+.project-right {
+    display: inline-block
+    width: constrained-width-partial
+    vertical-align: top
+    min-height: 100%
+    box-sizing: border-box
+    padding: 2.375rem 1.75rem 2.375rem 0
 
     // hover-fade
     -webkit-transform: translateZ(0)
@@ -26,35 +52,11 @@
     transition-duration: 0.3s
     -webkit-transition-property: color, background-color
     transition-property: color, background-color
-
-    @media (max-width: constrained-width) {
-        mobile-padding()
-        width: constrained-width-mobile
-    }
-}
-.project:hover, .project:focus, .project:active {
-    background-color: #242b32
-}
-
-.project:last-child, .project:nth-last-child(2) {
-    border-bottom: none;
-}
-
-@media (max-width: constrained-width) {
-    .project:nth-last-child(2) {
-        border-bottom: solid 1px dark-dark
-    }
 }
 
 .project-right {
     padding-left: 1.75rem
-    padding-right: constrained-width-half-partial
-    border-right: none
-    margin-left: -0.25rem // Ensure the lines meet up
-
-    @media (max-width: constrained-width) {
-        mobile-padding()
-    }
+    border-left: solid 1px dark-dark
 }
 
 .project__name {
@@ -96,16 +98,26 @@
     width: 2rem
     height: auto
     position: absolute
+
+    @media (max-width: constrained-width) {
+        position: static
+        float: left
+        margin-right: 1rem
+    }
 }
 .project__icon + .project__meta,
 .project__icon + .project__meta + .project__description {
     margin-left: 3rem
+
+    @media (max-width: constrained-width) {
+        margin-left: 0
+    }
 }
 
 .project__viewmore {
     display: block
     font-size: 1.5rem
-    margin-top: 2.25rem
+    margin-top: 1rem
     color: white
     text-decoration: none
     &:hover {
